log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Wed 29 Mar 2023 11:02:29 PM UTC: 
 tests:  0|6
total_score: 0/70
1ea5c93
Thu 30 Mar 2023 02:31:05 AM UTC: 
 arraylist.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2aaf41e
Thu 30 Mar 2023 02:39:36 AM UTC: 
 arraylist.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
4a9c57c
Thu 30 Mar 2023 02:42:40 AM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|4
total_score: 20/70
3f4ba4b
Thu 30 Mar 2023 02:49:50 AM UTC: 
 arraylist.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  3|4
total_score: 20/70
c2c2918
Thu 30 Mar 2023 02:50:29 AM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|3
total_score: 30/70
c94c166
Thu 30 Mar 2023 03:05:21 AM UTC: 
 arraylist.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘get’:
arraylist.c:56:1: error: control reaches end of non-void function [-Werror=return-type]
   56 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4132d84
